# ai-agent-controlplane-demo

./: .env.example  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml
a2a-agents/auditor/: Dockerfile  __main__.py  agent_executor.py
a2a-agents/payments/: Cargo.toml  Dockerfile
a2a-agents/payments/src/: main.rs
companion/: app.py  screenshot.py
docs/: ARCHITECTURE.md  RUNBOOK.md  proof.html
docs/screenshots/: verify.txt
docs/superpowers/plans/: 2026-06-02-bob-controlplane-demo.md
docs/superpowers/research/: M0-code-reference.md  M0-live-findings.md
docs/superpowers/specs/: 2026-06-01-bob-contextforge-controlplane-talk-design.md
gateway/: IMAGE_DIGEST.txt
gateway/custom/: finbyte_guard.py
gateway/seed/: seed.py
mcp-servers/controlplane/: Dockerfile  server.py
mcp-servers/erp-payments/: server.py
mcp-servers/expense-db/: server.py
mcp-servers/fx-rates/: server.py
mcp-servers/notify/: server.py
mcp-servers/policy-docs/: server.py
scripts/: demo.sh  quickstart.sh  watch-decisions.sh
slides/: ~$bob-controlplane-talk.pptx
