[package]
name = "payment-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
a2a        = { package = "a2a-lf",        version = "0.3.0" }
a2a-server = { package = "a2a-server-lf", version = "0.4.0", default-features = false }
tokio   = { version = "1", features = ["full"] }
axum    = { version = "0.8", features = ["macros"] }
futures = "0.3"
chrono  = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
